[package]
name = "struct_fragment"
description = "A macro to create a duplicate of a struct with keys removed."
version = "0.0.1"
authors = ["Kea Barnes"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.12"
proc-macro2 = "0.4.30"

[dependencies.syn]
version = "0.15.34"
features = ["full"]
