[package]
name = "struct_fragment"
description = "A macro to create a duplicate of a struct with keys removed."
version = "0.0.1"
authors = ["Kea Barnes"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["struct", "partial", "duplicate", "database", "insert"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"

[dependencies.syn]
version = "1.0.60"
features = ["full"]
